--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,8 +24,8 @@ body{
     display: flex;
 }
 button{
-    height: 120px;
-    width: 120px;
+    height: 140px;
+    width: 140px;
     border: none;
     border-radius: 7px;
     background-color: white;
@@ -38,17 +38,20 @@ justify-content: center;
 }
 
 #scale{
-    margin-left: 3rem;
+    margin-left: 3.5rem;
 }
 
 #hot{
+    margin-left: 2.9rem;
+}
+#beaker{
     margin-left: 2.5rem;
 }
 
 #length,#temperature,#volume{
     display: inline-grid;
     align-items: center;
-    color: rgba(128, 128, 128, 0.233);
+    color: rgba(14, 11, 11, 0.233);
 }
 #length:hover{
     color:  rgb(57, 124, 124);
@@ -94,19 +97,20 @@ justify-content: center;
 }
 .inputbox input{
     font-family: 'Open Sans', sans-serif;
-    font-size: 1em;
-    width: 80%;
-    margin-top: 10px;
-    height: 40px;
+    font-size: 1.5em;
+    width: 100%;
+    margin-top: 0px;
+    height: 45px;
     box-sizing: border-box;
 }
 .inputbox span select {
     background-color: #fff;
-    color: #000;
+    color: grey;
     font-size: inherit;
     padding: 10px;
-    width: 80%;
-    border: 0;
+    width: 100%;
+    height: 40px;
+    box-shadow: 0px 0px 2px 1px #cacaca;
     margin: 0;
     border-radius: 0px;
     text-indent: 0.01px;
